# tagma

./: .gitignore  AGENTS.md  CITATION.cff  README.md  run.sh
.github/workflows/: build.yml  deploy-docs.yml  test.yml
docs/: _brief-coordcube-insertion.qmd  _quarto-website.yml  _quarto.yml  _quarto_pre-render.py  _wp-insertion-guide.qmd  build.yml  citation.cff  index.qmd  tagma-id.qmd  wp.qmd
docs/_include/: _generate_metadata_tex.py  _graphviz.py  _license.md  _title_meta_items.qmd  _updated_docs_list.qmd  author.founder.yml  author.yml  format.beamer.yml  format.html.yml  format.pdf.yml  reference.bib  snippet-coordcube-wp.qmd
docs/_include/bench/: fig-bench-2ch.qmd  fig-bench-cubedist.qmd  fig-bench-cubeproximity.qmd  fig-bench-cubescaling.qmd  fig-bench-kvproximity.qmd
poc/: run.sh
poc/base11172/: Cargo.toml  run.sh
poc/base11172/src/: lib.rs  main.rs
poc/nex-tagma/: .gitignore  Cargo.toml  README.md  run.sh
poc/nex-tagma/src/: coord.rs  lib.rs  main.rs
poc/nex-tagma/tests/: tagma.rs
spec/: coord-space.md
sw/rust/: Cargo.toml  Makefile
sw/rust/base11172/: Cargo.toml
sw/rust/base11172/src/: lib.rs  main.rs
sw/rust/benches/: Cargo.toml  bench.rs
sw/rust/core/: Cargo.toml
sw/rust/core/benches/: bench.rs
sw/rust/core/src/: coord.rs  coord_cube.rs  coord_path.rs  coord_rec.rs  coord_set.rs  coord_set_n.rs  coord_space.rs  coord_space_dense.rs  coord_space_m.rs  coord_space_n.rs  dyn_coord.rs  dyn_coord_space.rs  flat.rs  hashmap.rs  key.rs  keymap.rs  lib.rs  map.rs  path.rs  set.rs
sw/rust/core/tests/: coord.rs  coord_cube.rs  coord_map.rs  coord_path.rs  coord_set.rs  coord_set_n.rs  coord_space.rs  coord_space_dense.rs  coord_space_m.rs  coord_space_n.rs  dyn_coord_space.rs  hashmap_bench.rs  hashmap_equiv.rs  no_alloc.rs
sw/rust/devlog/: 2026-07-16-map-to-space.md  2026-07-16-tagma-core-rust-hardware-postmortem.md  2026-07-19-dense-vs-sparse-tradeoff.md  2026-07-21-tagma-kv-bridge.md  2026-07-22-scale-invariant-latency.md  2026-07-24--coordcube-architecture.qmd
sw/rust/geo/src/: lib.rs  spatial.rs
sw/rust/kv/: Cargo.toml
sw/rust/kv/src/: coord_gen.rs  coord_kv.rs  coord_kv2.rs  coord_kv_n.rs  dyn_coord_kv.rs  spatial.rs
sw/rust/tagma-kv/src/: coord_gen.rs  coord_kv.rs  coord_kv2.rs  coord_kv_n.rs  dyn_coord_kv.rs  lib.rs
sw/rust/tagma-kv/tests/: basic.rs
