[package]
name = "tagma-benchmarks"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Tagma performance benchmarks: CoordMap vs std HashMap"

[dependencies]
tagma-core.workspace = true

[dev-dependencies]
criterion = { version = "0.5" }
rand = "0.8"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
