[package]
name = "tagma-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Tagma: content-addressable structural primitive — Coord, CoordMap, CoordSet, CoordPath"

[features]
default = ["alloc"]

# Enables heap-backed data structures (CoordMap with N>1 tree, Box-based N=1 flat map).
# Without this feature, only core types are available:
#   Coord, CoordPath, CoordSet (all no_std, no alloc).
# CoordMap and related types require this feature.
alloc = []

[dev-dependencies]
