[package]
name = "tagma-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Tagma: content-addressable structural primitive — Coord, CoordSpace, CoordSet, CoordPath"

[features]
default = ["alloc"]

# Enables heap-backed data structures (CoordSpace with N>1 tree, Box-based N=1 flat map).
# Without this feature, only core types are available:
#   Coord, CoordPath, CoordSet (all no_std, no alloc).
# CoordSpace and related types require this feature.
alloc = []

# Enables CoordSpaceM (mmap-backed dense array for N>=3).
# Implies alloc. Dependencia libc proporciona mmap en Unix.
mmap = ["alloc", "libc"]

[dependencies]
libc = { version = "0.2", optional = true }

# Integration tests require alloc (use CoordSpaceN, DynCoordSpace, etc.).
# `cargo test --no-default-features` automatically skips this binary.
[[test]]
name = "coord_space"
path = "tests/coord_space.rs"
required-features = ["alloc"]

[[test]]
name = "coord_set_n"
path = "tests/coord_set_n.rs"
required-features = ["alloc"]

[[test]]
name = "coord_space_n"
path = "tests/coord_space_n.rs"
required-features = ["alloc"]

[[test]]
name = "dyn_coord_space"
path = "tests/dyn_coord_space.rs"
required-features = ["alloc"]

[[test]]
name = "coord_space_dense"
path = "tests/coord_space_dense.rs"
required-features = ["alloc"]

[[test]]
name = "coord_space_m"
path = "tests/coord_space_m.rs"
required-features = ["mmap"]

[dev-dependencies]
